--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "https-proxy-agent": "^1.0.0",
+    "mongodb": "^2.1.18",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "request": "^2.72.0",
+    "serve-favicon": "~2.3.0",
+    "uuid4": "^1.0.0"
   }
 }
