--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "hbs": "~3.1.0",
-    "https-proxy-agent": "^1.0.0",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "hbs": "^4.0.4",
+    "https-proxy-agent": "^2.2.2",
     "mongodb": "^2.1.18",
-    "morgan": "~1.6.1",
+    "morgan": "^1.9.1",
     "request": "^2.72.0",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "^2.5.0",
     "uuid4": "^1.0.0"
   }
 }
